# mujoco-grasping-sim

./: .gitignore  README.md  arr_to_map.cpp  blocks.xml  grasper.xml  gripper.xml  klocki.xml  main.c  main.cpp  makefile  many_balls.xml  moving_light.xml  only_ball.xml  photo.tga  run_unix  run_win.bat
blocks_models/: densely.xml  many_balls.xml  many_boxes.xml  one_ball.xml  one_on_another.xml  sparsely.xml  various_blocks.xml
map_maker/: CMakeLists.txt  blocks.xml  cubes.xml  gripper.xml  main.cpp  makefile  run_unix
movie_taker/: blocks.xml  main.cpp  makefile  run_unix
results/: cubes_time.txt  densely_time.txt  many_balls_time.txt  many_boxes_time.txt  one_ball_time.txt  one_on_another_time.txt  sparsely_time.txt  various_blocks_time.txt
